# zapatos

./: Cargo.toml  README.md  ZAPATOS_BRANCH_INFO.md  changes.txt  ephemeral_identity_key
.github/actions/build_env/: action.yaml
.github/workflows/: binaries.yaml  builds.todo  cache.yaml  clear-logs.yaml  clear_logs.yaml  clear_workflows.yaml  publish.yaml  rust-builds.yaml  rust-lint.yaml  rust-versions.yaml
.github_bak/actions/rust-setup/: action.yaml
api/src/tests/: secp256k1_ecdsa.rs
api/types/src/: transaction.rs
aptos-move/aptos-gas/src/: move_stdlib.rs
aptos-move/aptos-vm/src/: adapter_common.rs  (+2 more)
aptos-move/framework/: Cargo.toml
aptos-node/: Cargo.toml
aptos-node/src/: lib.rs  main.rs  state_sync.rs
crates/aptos/: Cargo.toml
dkg/: Cargo.toml
dkg/src/: epoch_manager.rs
shoes/: Cargo.toml
shoes/src/: lib.rs
testsuite/cross-chain-tester/: Cargo.toml
testsuite/smoke-test/: Cargo.toml
types/src/: chain_id.rs  utility_coin.rs  validator_txn.rs
zap/: Cargo.toml  PLAN.md  README.md
zap/src/: lib.rs  main.rs  mode.rs
zap/src/config/: discovery.rs  mod.rs  network_address.rs  node_config.rs  peer_discovery.rs  seeds.rs
zap/src/crypto/: bls12381.rs  hash.rs  mod.rs  noise.rs
zap/src/network/: handshake.rs  mod.rs  network.rs  transport.rs
zap/src/state_sync/: message.rs  mod.rs  rest_client.rs  state_sync.rs
zap/src/storage/: aptos_db.rs  mod.rs
zap/src/tests/: analyze_bcs.rs  debug_genesis.rs  deserialize_network_address.rs  find_enum.rs  fixtures.rs  manual_parse_network_address.rs  mod.rs  parse_fullnode_address.rs
zap/src/types/: account_address.rs  bitvec.rs  block_info.rs  contract_event.rs  epoch_state.rs  ledger_info.rs  mod.rs  network_address.rs  state_store.rs  transaction.rs  validator_verifier.rs  waypoints.rs  write_set.rs
zap/tests/: handshake_test.rs
(+92 files in other folders)
